[package]
name = "fortran-rs"
version = "0.1.0"
edition = "2021" 
authors = ["Xavier2p <https://github.com/Xavier2p>"]
description = "An open-source Fortran interpreter.\nWritten in Rust."
license = "MIT"
readme = ".github/README.md"
repository = "https://github.com/Xavier2p/fortran.rs"
homepage = "https://xavier2p.github.io/fortran.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-case = "3.1.0"
colored = "2.0.0"
clap = { version = "3.2.25", features = ["derive"] }
